@@ -3,6 +3,7 @@ package com.raccoon.prefsimnotary.service.impl;
 
 import com.raccoon.prefsimnotary.auth.TokenProvider;
 import com.raccoon.prefsimnotary.event.PreferenceCreatedEvent;
+import com.raccoon.prefsimnotary.event.PreferenceCreatedEventPublisher;
 import com.raccoon.prefsimnotary.exception.ApiError;
 import com.raccoon.prefsimnotary.exception.PrefsimException;
 import com.raccoon.prefsimnotary.model.dto.request.PreferenceRequestDto;
@@ -21,7 +22,7 @@ import com.raccoon.prefsimnotary.repository.UserRepository;
 import com.raccoon.prefsimnotary.service.NotaryOfficeService;
 import com.raccoon.prefsimnotary.service.TermService;
 import com.raccoon.prefsimnotary.service.UserService;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -29,14 +30,12 @@ import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
+import javax.validation.*;
 import java.util.*;
-import java.util.stream.Collectors;
 
-@Transactional
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final AuthenticationManager authenticationManager;
@@ -45,10 +44,9 @@ public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final TermService termService;
     private final NotaryOfficeService notaryOfficeService;
-    private final ApplicationEventPublisher applicationEventPublisher;
 
     @Override
-    public AccessTokenResponseDto login(UserLoginRequestDto userLoginRequestDto) {
+    public AccessTokenResponseDto login(@Valid UserLoginRequestDto userLoginRequestDto) {
         final String username = userLoginRequestDto.getUsername();
         final String password = userLoginRequestDto.getPassword();
         try {
@@ -60,7 +58,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public AccessTokenResponseDto register(UserRegisterRequestDto userRegisterRequestDto) {
+    public AccessTokenResponseDto register(@Valid UserRegisterRequestDto userRegisterRequestDto) {
 
         checkUsername(userRegisterRequestDto.getUsername());
 
@@ -104,53 +102,49 @@ public class UserServiceImpl implements UserService {
                 .getPrincipal();
     }
 
+    @PreferenceCreatedEventPublisher
     @Override
-    public User createPreference(PreferenceRequestDto preferenceRequestDto) {
+    public void createPreference(PreferenceRequestDto preferenceRequestDto) {
 
         final User currentUser = getCurrentUser();
         final NotaryInfo notaryInfo = currentUser.getNotaryInfo();
-
-        checkNotaryPayment(notaryInfo);
-        checkNotaryPreferenceStatus(notaryInfo);
-
-        final Set<NotaryOffice> notaryOffices = new HashSet<>(notaryOfficeService
-                .getActiveNotaryOfficeList(preferenceRequestDto.getNotaryOfficeCodes()));
-
-        checkNotaryAndNotaryOfficeClass(notaryInfo, notaryOffices);
-
         final Term activeTerm = termService.getActiveTerm();
-        final Preference newPreference = new Preference(activeTerm, notaryOffices);
 
-        if (notaryInfo.hasPreferences()) {
-            notaryInfo.getPreferences().removeIf(preference -> preference.getTerm().equals(activeTerm));
-            notaryInfo.getPreferences().add(newPreference);
-        } else {
-            Set<Preference> preferences = new HashSet<>();
-            preferences.add(newPreference);
-            notaryInfo.setPreferences(preferences);
-        }
+        final Set<NotaryOffice> notaryOffices = notaryOfficeService
+                .getActiveNotaryOfficeListSortedByIncomeDesc(preferenceRequestDto.getNotaryOfficeCodes());
 
-        final User user = userRepository.save(currentUser);
-        applicationEventPublisher.publishEvent(new PreferenceCreatedEvent(getCurrentUser()));
-        return user;
+        notaryInfo.addPreference(new Preference(activeTerm, notaryOffices));
+
+        userRepository.save(currentUser);
     }
 
     @Override
-    public List<PreferenceResultResponseDto> getAllUsersPreferenceResults() {
+    public List<User> getNotaryUserListSortedByRegisterNumber(Term term) {
+
+        return getUserList()
+                .stream()
+                .filter(User::isNotary)
+                .filter(user -> user.getNotaryInfo().hasPreference(term))
+                .sorted(Comparator.comparing(user -> user.getNotaryInfo().getRegisterNumber()))
+                .toList();
+    }
+
+    @Override
+    public void updateEstimatedNotaryOffice(User user, NotaryOffice notaryOffice) {
+
+        user.getNotaryInfo().setEstimatedNotaryOffice(notaryOffice);
+        userRepository.save(user);
+
+    }
+
+    @Override
+    public List<PreferenceResultResponseDto> getPreferenceResults() {
         return getUserList()
                 .stream()
                 .map(user -> new PreferenceResultResponseDto(
                         user.getNotaryInfo().getName(),
-                        user.getNotaryInfo().getPresumptiveNotaryOffice()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public void updatePresumptiveNotaryOffice(User user, NotaryOffice notaryOffice) {
-
-        user.getNotaryInfo().setPresumptiveNotaryOffice(notaryOffice);
-        userRepository.save(user);
-
+                        user.getNotaryInfo().getEstimatedNotaryOffice()))
+                .toList();
     }
 
     private void checkUsername(String username) {
@@ -158,31 +152,4 @@ public class UserServiceImpl implements UserService {
             throw new PrefsimException(ApiError.USER_ALREADY_EXISTS, "User already exists : " + username);
         }
     }
-
-    private void checkNotaryPayment(NotaryInfo notaryInfo) {
-        if (!notaryInfo.isPaymentEnabled()) {
-            throw new PrefsimException(ApiError.INVALID_PAYMENT_STATUS,
-                    "Notary payment status is not available to create preference.");
-        }
-    }
-
-    private void checkNotaryPreferenceStatus(NotaryInfo notaryInfo) {
-        if (!notaryInfo.isPreferenceEnabled()) {
-            throw new PrefsimException(ApiError.INVALID_PREFERENCE_STATUS,
-                    "Notary preference status is not available to create preference.");
-        }
-    }
-
-    private void checkNotaryAndNotaryOfficeClass(NotaryInfo notaryInfo, Set<NotaryOffice> notaryOffices) {
-
-        notaryOffices.stream()
-                .filter(notaryOffice -> notaryOffice.getNotaryOfficeClass() < notaryInfo.getNotaryClass())
-                .findAny()
-                .ifPresent(t -> {
-                    throw new PrefsimException(ApiError.INVALID_PREFERENCE_STATUS,
-                            "Notary office class can not be higher notary class!");
-                });
-    }
-
-
 }
